--- a/eas.json
+++ b/eas.json
@@ -11,11 +11,23 @@
       }
     },
     "preview": {
+      "android": {
+        "buildType": "apk",
+        "distribution": "internal"
+      },
       "distribution": "internal",
       "channel": "preview",
       "ios": {
         "resourceClass": "m-medium"
       }
+    },
+    "preview2": {
+      "android": {
+        "gradleCommand": ":app:assembleRelease"
+      }
+    },
+    "preview3": {
+      "developmentClient": true
     },
     "production": {
       "channel": "production",
